# cob_people_perception

cob_leg_detection/: CMakeLists.txt  package.xml
cob_leg_detection/cfg/: DualTracker.cfg
cob_leg_detection/include/cob_leg_detection/: advanced_tracker_particle.h  dual_tracker.h  laser_processor.h  leg_feature.h  people_particle_filter.h  people_tracker.h
cob_leg_detection/include/cob_leg_detection/association/: association.h
cob_leg_detection/include/cob_leg_detection/detection/: detection.h
cob_leg_detection/include/cob_leg_detection/distributions/: multivariate_gaussian_pos_vel.h
cob_leg_detection/include/cob_leg_detection/jpda/: murty.h
cob_leg_detection/include/cob_leg_detection/models/: advanced_measmodel_pos.h  advanced_sysmodel_pos_vel.h
cob_leg_detection/include/cob_leg_detection/visualization/: visualization_conversions.h
cob_leg_detection/launch/: dual_tracker.launch  dual_tracker_cob.launch  dual_tracker_front.launch  dual_tracker_left.launch  dual_tracker_right.launch
cob_leg_detection/src/: advanced_tracker_particle.cpp  dual_tracker.cpp  leg_feature.cpp  people_particle_filter.cpp  people_tracker.cpp
cob_leg_detection/src/association/: association.cpp
cob_leg_detection/src/distributions/: gaussian_pos_vel_mod.cpp  multivariate_gaussian_pos_vel.cpp
cob_leg_detection/src/jpda/: murty_demo.cpp
cob_leg_detection/src/kalman/: KalmanFilterDemo.cpp  kalman_filter.cpp
cob_leg_detection/src/models/: advanced_measmodel_pos.cpp  advanced_sysmodel_pos_vel.cpp  occlusion_model.cpp
cob_people_fusion/cfg/: detector_config_all.yaml
cob_people_fusion/launch/: people_fusion.launch
cob_people_fusion/src/detection/: detector.cpp
